--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,20 @@ body{
     /* align-items: center;
     text-align: center; */
 }
+
+
+#progress-container {
+    width: 100%;
+    background-color: #ddd;
+    height: 20px;
+    border-radius: 10px;
+    margin-bottom: 10px;
+    overflow: hidden;
+  }
+
+#progress-bar {
+    height: 100%;
+    width: 0%;
+    background-color: #4caf50;
+    transition: width 0.3s ease;
+  }
