--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,32 @@
 body{
-    /* align-items: center;
-    text-align: center; */
+    align-items: center;
+    text-align: center;
 }
 
-
+#category-one{
+    /* width: 20px; */
+    height: 50px;
+    background-color:#4caf50;
+    cursor: pointer;
+}
+#category-two{
+    /* width: 20px; */
+    height: 50px;
+    background-color:#534caf;
+    cursor: pointer;
+}
+#category-three{
+    /* width: 20px; */
+    height: 50px;
+    background-color:#9e2525;
+    cursor: pointer;
+}
+#category-four{
+    /* width: 20px; */
+    height: 50px;
+    background-color:#af984c;
+    cursor: pointer;
+}
 #progress-container {
     width: 100%;
     background-color: #ddd;
